--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
     <h1>Welcome to My Book App</h1>
     <p>The best place to manage your book collections.</p>
-    <button style="background-color: black; color: white; padding: 10px;">
-        Login with TikTok
-    </button>
+<form action="https://67190c069910.ngrok-free.app/login" method="get">
+  <button type="submit" style="background-color: black; color: white; padding: 10px;">
+    Login with TikTok
+  </button>
+</form>
     <br><br>
     <a href="privacy.html">Privacy Policy</a> | <a href="tos.html">Terms of Service</a>
 </body>
